--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@react-spring/web": "^10.0.1",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
-    "framer-motion": "^12.19.2",
+    "framer-motion": "^12.23.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.5.0",
     "react-icons": "^5.5.0",
     "sass": "^1.89.2",
     "three": "^0.177.0"
